Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </tr>
   <tr>
     <td>New York</td>
-    <td>718-555-1212</td>
-    <td>Guacamole</td>
+    <td>New York</td>
+    <td>8622698</td>
   </tr>
   <tr>
-    <td>Rachel</td>
+    <td>Los Angeles</td>
     <td>718-555-1212</td>
     <td>Chips</td>
   </tr>
